@@ -130,6 +130,15 @@ list_d_files <- function(paths, recursive = TRUE, filter = NULL) {
   files <- files[!is.element(basename(files), ignores)]
   files <- grep("/(__MACOSX|[.]Trash|[.]Trashes)/", files, value = TRUE,
                 fixed = FALSE, invert = TRUE)
+  hidden <- grep("._", basename(files), fixed = TRUE, value = FALSE)
+  if (length(hidden) > 0) {
+    hidden_files <- files[hidden]
+    hidden_names <- sub("^[.]_", "", basename(hidden_files))
+    hidden_siblings <- file.path(dirname(hidden_files), hidden_names)
+    drop <- is.element(hidden_siblings, files)
+    hidden_files <- hidden_files[drop]
+    files <- setdiff(files, hidden_files)
+  }
 
   ## Drop files based on filename endings
   files <- grep("([.]md|[.]txt|~)$", files, value = TRUE, invert = TRUE)
